--- a/pages/sampleOrderDetail/sampleOrderDetail.wxml
+++ b/pages/sampleOrderDetail/sampleOrderDetail.wxml
@@ -57,7 +57,7 @@
 			<van-tab title="{{index+1}}次打样" name="{{index+1}}" wx:for="{{sampleOrderDetail.time_data}}" wx:for-item="item"
 				wx:key="item" wx:for-index="index">
 				<view class="title mt10 bold">打样记录</view>
-				<view class="por">
+				<view class="por" bindtap="watchCheck" data-item="{{item}}">
 					<van-image style="position: absolute;right:0;top:10%" width="130" height="94"
 						src="{{statusList[item.is_check]}}" />
 				</view>
@@ -188,11 +188,6 @@
 										<view>{{itemMaterialTrans.number}}</view>
 									</view>
 								</view>
-								<view class="flex jcsb mt10 mb20" wx:if="{{itemChild.material_transfer.length === 0}}">
-									<view class="bgColorD8 colorWhite tc"
-										style="border-radius: 500px;width:25px;height: 25px;line-height: 25px;">调</view>
-									<view class="w90 tc color9E">无调取信息</view>
-								</view>
 
 								<!-- 采 -->
 								<view class="flex jcsb mt10 mb20" wx:for="{{itemChild.material_order}}" wx:for-item="itemMaterialOrder"
@@ -204,11 +199,6 @@
 										<view>{{itemMaterialOrder.material_color}}</view>
 										<view>{{itemMaterialOrder.number}}{{itemMaterialOrder.unit}}</view>
 									</view>
-								</view>
-								<view class="flex jcsb mt10 mb20" wx:if="{{itemChild.material_order.length === 0}}">
-									<view class="bgColorD8 colorWhite tc"
-										style="border-radius: 500px;width:25px;height: 25px;line-height: 25px;">采</view>
-									<view class="w90 tc color9E">无订购信息</view>
 								</view>
 
 								<!-- 加 -->
@@ -222,11 +212,6 @@
 										<view>{{itemMaterialProcess.number}}{{itemMaterialProcess.unit}}</view>
 									</view>
 								</view>
-								<view class="flex jcsb mt10 mb20" wx:if="{{itemChild.material_process.length === 0}}">
-									<view class="bgColorD8 colorWhite tc"
-										style="border-radius: 500px;width:25px;height: 25px;line-height: 25px;">加</view>
-									<view class="w90 tc color9E">无加工信息</view>
-								</view>
 
 								<!-- 入 -->
 								<view class="flex jcsb mt10 mb20" wx:for="{{itemChild.final_push}}" wx:for-item="itemMaterialPush"
@@ -234,14 +219,9 @@
 									<text class="bgColor27A2 colorWhite tc"
 										style="border-radius: 500px;width:25px;height: 25px;line-height: 25px;">入</text>
 									<view class="w90 flex jcsb aic">
-										<view>{{itemMaterialPush.client_name}}</view>
-										<view>{{itemMaterialPush.number}}{{itemMaterialPush.unit}}</view>
+										<view>{{itemMaterialPush.store}}</view>
+										<view>{{itemMaterialPush.number}}</view>
 									</view>
-								</view>
-								<view class="flex jcsb mt10 mb20" wx:if="{{itemChild.final_push.length === 0}}">
-									<view class="bgColorD8 colorWhite tc"
-										style="border-radius: 500px;width:25px;height: 25px;line-height: 25px;">入</view>
-									<view class="w90 tc color9E">无入库信息</view>
 								</view>
 
 								<!-- 出 -->
@@ -254,10 +234,9 @@
 										<view>{{itemMaterialPop.number}}{{itemMaterialPop.unit}}</view>
 									</view>
 								</view>
-								<view class="flex jcsb mt10 mb20" wx:if="{{itemChild.final_pop.length === 0}}">
-									<view class="bgColorD8 colorWhite tc"
-										style="border-radius: 500px;width:25px;height: 25px;line-height: 25px;">出</view>
-									<view class="w90 tc color9E">无出库信息</view>
+
+								<view class="flex jcsb mt10 mb20" wx:if="{{ itemChild.material_transfer.length === 0 && itemChild.material_order.length === 0 && itemChild.material_process.length === 0 && itemChild.final_push.length === 0 && itemChild.final_pop.length === 0}}">
+									<view class="w90 tc color9E">暂无原料信息</view>
 								</view>
 							</view>
 						</view>
@@ -984,6 +963,7 @@
 	</van-popup>
 	<t-image-viewer visible="{{showImage1}}" background-color='rgba(0, 0, 0, 0.6)' images="{{productInfo.image_data}}"
 		bind:close="closeShowImage" />
+	<check-detail show="{{showCheckDetail}}" pid="{{showPid}}" is_check="{{is_checkDetail}}" check_type="1" bind:cancel="closeCheckDetail"></check-detail>
 	<!-- <t-picker visible="{{showStatusChoose}}" value="{{status_choose}}" cancel-btn="取消" confirm-btn="确认"
 		bindconfirm="confirmStatusChoose" bindcancel="closeStatusChoose">
 		<t-picker-item options="{{chooseStatusList}}" />
