--- a/pages/billingManagement/collectionList/collectionList.wxml
+++ b/pages/billingManagement/collectionList/collectionList.wxml
@@ -18,7 +18,7 @@
 		</view>
 
 		<view class="flex jcsb" style="padding: 10px;">
-			<view>开票金额</view>
+			<view>收款金额</view>
 			<view class="color03d0 bold">{{additional.total_price || 0}} 万元</view>
 		</view>
 	</view>
@@ -43,8 +43,16 @@
 				<view>{{item.client.name}}</view>
 			</view>
 			<view class="w100 flex aic mt10">
-				<view class="title w32">开票金额：</view>
-				<view>{{item.price}}</view>
+				<view class="title w32">创建日期：</view>
+				<view>{{item.created_at}}</view>
+			</view>
+			<view class="w100 flex aic mt10">
+				<view class="title w32">收款金额：</view>
+				<view class="color03d0">{{item.price}}</view>
+			</view>
+			<view class="w100 flex aic mt10">
+				<view class="title w32">收款金额：</view>
+				<view class="color03d0">{{item.priceChinese}}</view>
 			</view>
 			<view class="w100 flex aic mt10">
 				<view class="title w32">备注信息：</view>
