--- a/pages/sampleOrderDetail/sampleOrderDetail.wxml
+++ b/pages/sampleOrderDetail/sampleOrderDetail.wxml
@@ -30,7 +30,7 @@
 		</view>
 		<view>
 			<view style="color: #666666;">备注信息</view>
-			<view class="mt10 {{sampleOrderDetail.desc?'color3':'color9'}}">{{sampleOrderDetail.desc||'无'}}</view>
+			<rich-text class="mt10" style="color: #333333;" nodes="{{sampleOrderDetail.desc||'无'}}"></rich-text>
 		</view>
 	</view>
 
@@ -145,6 +145,7 @@
 								wx:for-index="indexProInfo" class="flex jcsb mt10">
 								<view>{{itemProInfo.size_name}}/{{itemProInfo.color_name}}</view>
 								<view>{{itemProInfo.price}}元/{{itemProInfo.number}}件</view>
+								<view>送样/留底：{{itemProInfo.sample_number||0}}/{{itemProInfo.keep_number||0}}</view>
 							</view>
 						</view>
 					</view>
@@ -250,9 +251,17 @@
 			</van-tab>
 		</van-tabs>
 	</view>
+	<!-- 财务概览 -->
 	<view class="card">
-		<view class="title">财务概览</view>
-		<view class="mt10 colorOrange">点击具体费用表格可查看详情</view>
+		<view class="title" style="margin-top: unset;">
+			财务流程汇总仅管理员可见
+		</view>
+	</view>
+	<view class="card" wx:if="{{has_check}}">
+		<view class="flex aic">
+			<view class="bold">财务概览</view>
+			<view class="ml10 color6">点击具体费用表格查看详情</view>
+		</view>
 		<view class="tc">
 			<view class="flex">
 				<view class="w33 pt10 pb10" style="border: 1px solid rgba(0,0,0,0.1);" bindtap='showFinancialPopup'
@@ -297,7 +306,12 @@
 			</view>
 		</view>
 	</view>
-	<view class="vh5"></view>
+	<view class="vh12"></view>
+	<view class="mt20 submit" style="position: fixed;bottom:5%;left:50%;transform: translateX(-50%);">
+		<view class="flex jcsa">
+			<van-button type="primary" size="small" data-type="showOrderLog" bindtap="showFinancialPopup">查看关联单据</van-button>
+		</view>
+	</view>
 
 	<!-- 样品费用 -->
 	<van-popup show="{{ showProductPopup }}" round>
@@ -891,6 +905,7 @@
 		<view style="height: 5vh;border-top: 1px solid #eeeeee;" class="flex aic jcc" bindtap='closeShowCheJianPopup'>关闭
 		</view>
 	</van-popup>
+	<order-log show="{{showOrderLog}}" order_id="{{order_id}}" top_id="{{id}}" bind:cancel="closeShowOrderLog"></order-log>
 	<l-message content="{{content}}" />
 	<van-dialog id="van-dialog" />
 
@@ -964,8 +979,11 @@
 	<t-image-viewer visible="{{showImage1}}" background-color='rgba(0, 0, 0, 0.6)' images="{{productInfo.image_data}}"
 		bind:close="closeShowImage" />
 	<check-detail show="{{showCheckDetail}}" pid="{{showPid}}" is_check="{{is_checkDetail}}" check_type="1" bind:cancel="closeCheckDetail"></check-detail>
-	<!-- <t-picker visible="{{showStatusChoose}}" value="{{status_choose}}" cancel-btn="取消" confirm-btn="确认"
-		bindconfirm="confirmStatusChoose" bindcancel="closeStatusChoose">
-		<t-picker-item options="{{chooseStatusList}}" />
-	</t-picker> -->
+	
+	<movable-area class="movable-area">
+		<movable-view class="movable-view" direction="vertical" x="10000000000" y='500'>
+			<view class="pof bgColorWhite pt5 pr10 pb5 pl10 color27A2" bindtap="toOrderList"
+				style="border: 1px solid #008df96b; border-radius:5px 0 0 5px;border-right: none;">上一页</view>
+		</movable-view>
+	</movable-area>
 </page-meta>
