--- a/app.wxss
+++ b/app.wxss
@@ -816,6 +816,14 @@ page {
 	width: 18%;
 }
 
+.w17 {
+	width: 17%;
+}
+
+.w16 {
+	width: 16%;
+}
+
 .w15 {
 	width: 15%;
 }
@@ -1423,4 +1431,21 @@ page {
 	width: 0;
 	height: 0;
 	color: transparent;
+}
+
+.movable-area{
+	pointer-events:none;
+	z-index: 100;
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+}
+.movable-view{ 
+	pointer-events:auto;
+	height: 50px;
+	width: 40px;
 }
