--- a/pages/editPassWord/editPassWord.wxml
+++ b/pages/editPassWord/editPassWord.wxml
@@ -18,12 +18,12 @@
 		<view class="line"></view>
 		<view class="flex jcsb">
 			<view>确认密码</view>
-			<input style="text-align: right;" type="text" placeholder="再次输入新密码以确认" bindblur="inputNewPwdConfirm"/>
+			<input style="text-align: right;" type="text" placeholder="再次输入新密码以确认" bindblur="inputNewPwdConfirm" />
 		</view>
 		<view class="line"></view>
 		<view class="flex jcsb">
 			<view>手机验证码</view>
-			<input style="text-align: right;" type="number" placeholder="输入验证码" bindblur="yanzhenCodeValue"/>
+			<input style="text-align: right;" type="number" placeholder="输入验证码" bindblur="yanzhenCodeValue" />
 		</view>
 	</view>
 
@@ -43,4 +43,10 @@
 	</view>
 
 	<l-message content="{{content}}" />
+	<movable-area class="movable-area">
+		<movable-view class="movable-view" direction="vertical" x="10000000000" y='500'>
+			<view class="pof bgColorWhite pt5 pr10 pb5 pl10 color27A2" bindtap="toManage"
+				style="border: 1px solid #008df96b; border-radius:5px 0 0 5px;border-right: none;">上一页</view>
+		</movable-view>
+	</movable-area>
 </view>
