--- a/pages/quotedPriceCreate/quotedPriceCreate.wxml
+++ b/pages/quotedPriceCreate/quotedPriceCreate.wxml
@@ -588,4 +588,11 @@
 	<!-- 报价单模板 -->
 	<picker values="{{searchPickerList}}" reload data-type="searchModele" data-itemtype="showModuleList"
 		bind:cancel="closeShowPicker" bind:confirm="confirmData" showDialog="{{showModuleList}}"></picker>
+
+	<movable-area class="movable-area">
+		<movable-view class="movable-view" direction="vertical" x="10000000000" y='500'>
+			<view class="pof bgColorWhite pt5 pr10 pb5 pl10 color27A2" bindtap="toQuotePrice"
+				style="border: 1px solid #008df96b; border-radius:5px 0 0 5px;border-right: none;">上一页</view>
+		</movable-view>
+	</movable-area>
 </view>
