--- a/pages/quotedPriceDetail/quotedPriceDetail.wxml
+++ b/pages/quotedPriceDetail/quotedPriceDetail.wxml
@@ -30,8 +30,8 @@
 			<view class="color6 w30">系统报价</view>
 			<view>
 				<text wx:if="{{detailData.system_total_price}}">
-					<text class="color27A2">{{detailData.system_total_price}}元 | </text>
-					<text class="color27A2" wx:if="{{detailData.settle_unit==='美元'}}">{{realTotalPriceChange}}美元</text>
+					<text class="color27A2">{{detailData.system_total_price}}元 </text>
+					<text class="color27A2" wx:if="{{detailData.settle_unit==='美元'}}">| {{realTotalPriceChange}}美元</text>
 				</text>
 				<text wx:else>
 					<text>无</text>
@@ -355,4 +355,11 @@
 	</van-popup>
 	<check-detail show="{{showCheckDetail}}" pid="{{id}}" is_check="{{detailData.is_check}}" check_type="5"
 		bind:cancel="closeCheckDetail"></check-detail>
+
+	<movable-area class="movable-area">
+		<movable-view class="movable-view" direction="vertical" x="10000000000" y='500'>
+			<view class="pof bgColorWhite pt5 pr10 pb5 pl10 color27A2" bindtap="toQuotePrice"
+				style="border: 1px solid #008df96b; border-radius:5px 0 0 5px;border-right: none;">上一页</view>
+		</movable-view>
+	</movable-area>
 </view>
