--- a/pages/reimbursementManage/reimbursementManage.wxml
+++ b/pages/reimbursementManage/reimbursementManage.wxml
@@ -61,6 +61,13 @@
 		showDialog="{{showStatus}}"></picker>
 	<picker values="{{groupList}}" bind:cancel="closeShowPicker" bind:confirm="confirmData" data-type="group"
 		showDialog="{{showGroup}}"></picker>
-	<picker values="{{someDateList}}" bind:cancel="closeShowPicker" bind:confirm="confirmData"
-		data-type="date" showDialog="{{showDate}}"></picker>
+	<picker values="{{someDateList}}" bind:cancel="closeShowPicker" bind:confirm="confirmData" data-type="date"
+		showDialog="{{showDate}}"></picker>
+
+	<movable-area class="movable-area">
+		<movable-view class="movable-view" direction="vertical" x="10000000000" y='500'>
+			<view class="pof bgColorWhite pt5 pr10 pb5 pl10 color27A2" bindtap="toIndex"
+				style="border: 1px solid #008df96b; border-radius:5px 0 0 5px;border-right: none;">上一页</view>
+		</movable-view>
+	</movable-area>
 </view>
